fixed scrollbar issue

--- a/SCSS/base/_index.scss
+++ b/SCSS/base/_index.scss
@@ -4,16 +4,13 @@
 * {
 	box-sizing: border-box;	
 }
-
 body {
 	font-family: 'Montserrat', sans-serif;
 	margin: 0;
+	padding: 0;
 	background: $color-default-bg; 
 }
-.container {
-	width: 100vw;
-	background-color: inherit;
-}
+
 
 h1, h2, h3, h4, h5, h6 {
 	font-family: 'Roboto', sans-serif;
