--- a/css/application.css
+++ b/css/application.css
@@ -13,11 +13,8 @@ header h1 {
 body {
   font-family: 'Montserrat', sans-serif;
   margin: 0;
+  padding: 0;
   background: #eee; }
-
-.container {
-  width: 100vw;
-  background-color: inherit; }
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Roboto', sans-serif; }
